# backend

./: .env.example  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: ac01b4fa63a5_initial_migration.py  d9ace2a367fc_make_category_optional_for_product.py
src/: cli.py  db.py  exceptions.py  logging_config.py  main.py  models.py  settings.py  utils.py  validators.py
src/models/: orm.py  schemas.py
src/models/utils/: category.py  product.py
src/services/: gpc_client.py  gs1ru_client.py  parser.py
