[project]
name = "goods-vault-backend"
version = "0.1.0"
description = "API for Goods Vault"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic-settings>=2.8.1",
    "sqlalchemy[asyncio]>=2.0.40",
    "typer>=0.15.2",
    "uvicorn>=0.34.1",
]
